--- a/pom.xml
+++ b/pom.xml
@@ -114,14 +114,24 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
 		</dependency>
-		<!--18.10.2016-->
+		<!--24.10.2016-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.goebl</groupId>
+            <artifactId>david-webb</artifactId>
+            <version>1.3.0</version>
+        </dependency>
 
 	</dependencies>
 
 	<profiles>
 		<profile>
 			<!-- OPENSHIFT PROFILE -->
-			<id>openshift</id>
+			<id>default</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
@@ -134,9 +144,10 @@
 				<hibernate.hbm2ddl.auto>update</hibernate.hbm2ddl.auto>
 				<!-- database properties -->
 				<db.driverClassName>com.mysql.jdbc.Driver</db.driverClassName>
-				<db.url>jdbc:mysql://127.7.216.2:3306/amirus?keepAlive=true</db.url>
-				<db.username>adminbukepJY</db.username>
-				<db.password>ckW5Q2dpJarl</db.password>
+				<db.url>jdbc:mysql://46.219.112.90:3306/amirus?keepAlive=true</db.url>
+				<!--<db.url>jdbc:mysql://address=(protocol=tcp)(host=127.7.216.2)(port=3306)/amirus?keepAlive=true</db.url>-->
+				<db.username>kuzmin</db.username>
+				<db.password>Lambo31s</db.password>
 			</properties>
 			<repositories>
 				<repository>
@@ -187,24 +198,24 @@
 			</properties>
 		</profile>-->
 
-		<profile>
-			<!-- TEST PROFILE -->
-			<!-- with properties for hsqldb -->
+		<!--<profile>
+			&lt;!&ndash; TEST PROFILE &ndash;&gt;
+			&lt;!&ndash; with properties for hsqldb &ndash;&gt;
 			<id>test</id>
 			<properties>
-				<!-- hibernate properties -->
+				&lt;!&ndash; hibernate properties &ndash;&gt;
 				<hibernate.dialect>org.hibernate.dialect.HSQLDialect</hibernate.dialect>
 				<hibernate.format_sql>true</hibernate.format_sql>
 				<hibernate.show_sql>true</hibernate.show_sql>
 				<hibernate.use_sql_comments>true</hibernate.use_sql_comments>
 				<hibernate.hbm2ddl.auto>create</hibernate.hbm2ddl.auto>
-				<!-- database properties -->
+				&lt;!&ndash; database properties &ndash;&gt;
 				<db.driverClassName>org.hsqldb.jdbcDriver</db.driverClassName>
 				<db.url>jdbc:hsqldb:mem:.</db.url>
 				<db.username>sa</db.username>
 				<db.password></db.password>
 			</properties>
-		</profile>
+		</profile>-->
 	</profiles>
 
 	<build>
