--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 #
-#Thu Nov 03 18:16:29 EET 2016
-filePath=C\:\\Users\\Aleks\\Desktop\\trades\\trades.20161025-3.csv
+#Tue Nov 15 15:14:46 EET 2016
+filePath=C\:\\Users\\Aleks\\Desktop\\tands
